# Zenyx

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.nix  cargo.toml  flake.nix  main.zensh  rustfmt.toml  test.zensh
.github/workflows/: code-quality.yml  rust.yml  version-check.yml
editor/: Cargo.toml
editor/src/: main.rs
engine/: Cargo.toml  test.zensh
engine/src/: main.rs
engine/src/core/: commands.rs  mod.rs  panic.rs  repl.rs  splash.rs
engine/src/core/ecs/: mod.rs
engine/src/core/logger/: mod.rs
engine/src/core/render/: ctx.rs  mod.rs
engine/src/core/renderer/: ctx.rs  mod.rs
engine/src/core/repl/: Re-exports.rs  commands.rs  exec.rs  handler.rs  input.rs  mod.rs  repl.rs  zlua.rs
engine/src/core/workspace/: mod.rs
engine/src/utils/: logger.rs  mod.rs  splash.rs
engine/text_editor/constants/: languageOptions.js
plugin_api/: Cargo.toml  build.rs
plugin_api/src/: lib.rs  plugin_imports.rs
plugins/player_lib/src/: lib.rs
subcrates/zen_core/: Cargo.toml
subcrates/zen_core/src/: lib.rs
subcrates/zephyr/: Cargo.toml  README.md
subcrates/zephyr/src/: hash_db.rs  lib.rs  test.rs
ui/: Cargo.toml
ui/src/: main.rs  viewport.rs  viewport_renderer.rs
ui2/: Cargo.toml
ui2/src/: app.rs  main.rs  renderer.rs
ui2/src/style/: mod.rs  modern_style.rs  shadow.rs
ui2/src/ui/: content_browser.rs  left_toolbar.rs  mod.rs  right_panel.rs  top_toolbar.rs  viewport.rs
xtask/: Cargo.toml
xtask/src/: editor.rs  engine.rs  main.rs
