[workspace]
resolver = "2"
members = ["engine", "subcrates/zephyr"]

[profile.dev]
rpath = false
panic = "abort"
lto = "off"
opt-level = 0
debug = false
overflow-checks = false
incremental = true
codegen-units = 512

strip = "symbols"
debug-assertions = false

[profile.dev.package."*"]   
opt-level = 0
debug = false
overflow-checks = false
incremental = true
codegen-units = 512

strip = "symbols"
debug-assertions = false
[profile.dev.build-override]
opt-level = 0
debug = false
overflow-checks = false
incremental = true
codegen-units = 512

[workspace.dependencies]
zephyr = { path = "./subcrates/zephyr" }
